--- a/getplaced/templates/login.html
+++ b/getplaced/templates/login.html
@@ -29,51 +29,38 @@
       @import url(//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css);
     </style>
 
-    <link rel="stylesheet" href="../static/css/login.css" />
+      <link rel="stylesheet" href="../static/css/login.css"/>
   </head>
   <body>
-    <div class="global-container">
+  <div class="global-container">
       <div class="card login-form">
-        <div class="card-body">
-          <h3 class="card-title text-center">Log in to GetPlaced</h3>
-          <div class="card-text">
-            <!--
-                    <div class="alert alert-danger alert-dismissible fade show" role="alert">Incorrect username or password.</div> -->
-            <form>
-              <!-- to error: add class "has-danger" -->
-              <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input
-                  type="email"
-                  class="form-control form-control-sm"
-                  id="exampleInputEmail1"
-                  aria-describedby="emailHelp"
-                />
-              </div>
-              <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                
-                <input
-                  type="password"
-                  class="form-control form-control-sm"
-                  id="exampleInputPassword1"
-                />
-                <a href="#" style="float: right; font-size: 12px;"
-                  >Forgot password?</a
-                >
-                <br/>
-              </div>
-              <button type="submit" class="btn btn-primary btn-block">
-                Sign in
-              </button>
+          <div class="card-body">
+              <h3 class="card-title text-center">Log in to GetPlaced</h3>
+              <div class="card-text">
+                  <!--
+                          <div class="alert alert-danger alert-dismissible fade show" role="alert">Incorrect username or password.</div> -->
+                  <form method="post">
+                      <!-- to error: add class "has-danger" -->
+                      <div class="form-group">
+                          <label for="email">Email address</label>
+                          <input
+                                  type="email" class="form-control form-control-sm" id="email" name="email"
+                                  aria-describedby="emailHelp" required
+                          />
+                      </div>
+                      <div class="form-group">
+                          <label for="password">Password</label>
 
-              <div class="sign-up">
-                Don't have an account? <a href="signup.html">Create One</a>
+                          <input type="password" class="form-control form-control-sm" id="password" name="password"
+                                 required/>
+                      </div>
+                      <button type="submit" class="btn btn-primary btn-block" value="">
+                          Sign in
+                      </button>
+                  </form>
               </div>
-            </form>
           </div>
-        </div>
       </div>
-    </div>
+  </div>
   </body>
 </html>
