--- a/getplaced/templates/dashboard.html
+++ b/getplaced/templates/dashboard.html
@@ -361,27 +361,33 @@
                           var svg1=d3
                             .select("#my_dataviz2")
                             .append("svg")//check
-                            .attr("width",width1)
-                            .attr("height",height1)
-                            .append("g")
-                            .attr("transform","translate("+width1/2+","+height1/2+")");
+                              .attr("width", width1)
+                              .attr("height", height1)
+                              .append("g")
+                              .attr("transform", "translate(" + width1 / 2 + "," + height1 / 2 + ")");
 
                           //get data
-                          d3.csv("../../placement-data.csv",function(data){
-                            console.log(data);
-                            var color=d3.scaleOrdinal().domain(data).range(d3.schemeSet2);
-                            //compute position of each group on pie:
-                            var data=d3.nest()
-                              .key(function(d){return d.Certifications;})
-                              .rollup(function(v){return d3.sum(v,function(d){return 1;});})
-                              .entries(data)
-                            console.log(JSON.stringify(data))
-                            var pie=d3.pie().value(function(d){
-                              console.log("d.value="+d.value);
-                              return d.value.value;
-                            });
-                            var data_ready=pie(d3.entries(data));
-                            var arcGenerator=d3.arc().innerRadius(0).outerRadius(radius1);
+                          d3.csv("../../placement-data.csv", function (data) {
+                              console.log(data);
+                              var color = d3.scaleOrdinal().domain(data).range(d3.schemeSet2);
+                              //compute position of each group on pie:
+                              var data = d3.next()
+                                  .key(function (d) {
+                                      return d.Certifications;
+                                  })
+                                  .rollup(function (v) {
+                                      return d3.sum(v, function (d) {
+                                          return 1;
+                                      });
+                                  })
+                                  .entries(data)
+                              console.log(JSON.stringify(data))
+                              var pie = d3.pie().value(function (d) {
+                                  console.log("d.value=" + d.value);
+                                  return d.value.value;
+                              });
+                              var data_ready = pie(d3.entries(data));
+                              var arcGenerator = d3.arc().innerRadius(0).outerRadius(radius1);
 
                             svg1
                               .selectAll("mySlices")
