Change password and fix href
Signed-off-by: Aditya Desai <aditya.desai0199@gmail.com>

--- a/getplaced/templates/login.html
+++ b/getplaced/templates/login.html
@@ -53,6 +53,9 @@
 
                           <input type="password" class="form-control form-control-sm" id="password" name="password"
                                  required/>
+
+                          <a href="changepassword" style="float: right; font-size: 12px;">Forgot password?</a>
+                          <br>
                       </div>
                       <button type="submit" class="btn btn-primary btn-block" value="">
                           Sign in
