--- a/getplaced/templates/change_password.html
+++ b/getplaced/templates/change_password.html
@@ -42,16 +42,15 @@
                   <form method="post">
                       <!-- to error: add class "has-danger" -->
                       <div class="form-group">
-                          <label for="password0">Password</label>
+                          <label for="email">Email</label>
                           <input
-                                  type="password" class="form-control form-control-sm" id="password0" name="password0"
-                                  aria-describedby="passwordHelp" required
+                                  type="password" class="form-control form-control-sm" id="email" name="email" required
                           />
                       </div>
                       <div class="form-group">
-                          <label for="password">Re-enter Password</label>
+                          <label for="password">Enter new Password</label>
 
-                          <input type="password" class="form-control form-control-sm" id="password1" name="password1"
+                          <input type="password" class="form-control form-control-sm" id="password" name="password"
                                  required/>
                       </div>
                       <button type="submit" class="btn btn-primary btn-block" value="">
