Add DataStudio iframe, add signup link in login page

--- a/getplaced/templates/dashboard.html
+++ b/getplaced/templates/dashboard.html
@@ -629,6 +629,7 @@
                 
               </div>
             </div>
+            <iframe width="100%" height="1080" src="https://datastudio.google.com/embed/reporting/db35d0d2-589e-45fd-b114-ceaf5011727a/page/viBRB" frameborder="0" style="border:0" allowfullscreen></iframe>
             <!-- Example DataTables Card-->
             
           </div>
