--- a/getplaced/templates/login.html
+++ b/getplaced/templates/login.html
@@ -60,6 +60,9 @@
                       <button type="submit" class="btn btn-primary btn-block" value="">
                           Sign in
                       </button>
+                      <div class="sign-up">
+                        New here? <a href="register">Sign Up</a>
+                    </div>
                   </form>
               </div>
           </div>
