--- a/getplaced/templates/change_password.html
+++ b/getplaced/templates/change_password.html
@@ -44,7 +44,7 @@
                       <div class="form-group">
                           <label for="email">Email</label>
                           <input
-                                  type="password" class="form-control form-control-sm" id="email" name="email" required
+                                  type="email" class="form-control form-control-sm" id="email" name="email" required
                           />
                       </div>
                       <div class="form-group">
