--- a/getplaced/templates/dashboard.html
+++ b/getplaced/templates/dashboard.html
@@ -638,7 +638,7 @@
           <footer class="sticky-footer">
             <div class="container">
               <div class="text-center">
-                <small>Copyright © Your Website 2018</small>
+                <small>Copyright ©GetPlaced 2020</small>
               </div>
             </div>
           </footer>
